@@ -10,6 +10,11 @@ Upcoming release
 ## Changes
 
 * Added RISC-V in `is_64_bit_arch()`
+* Added helpers `is_arch_arm()` and `is_arch_riscv()`
+* Added an additional parameter with the current architectures for the macros
+  `parse_dtb_node_interrupts()` and `global_endpoint_badges()`.
+* Extended DTB interrupt property parsing to support either one value or three
+  values per interrupt. For three values, ignore the first value on RISC-V.
 
 ## Upgrade Notes
 ---
